--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:orientation="horizontal">
-    
-<EditText android:id="@+id/edit_message"
-		  android:layout_weight="1"
-		  android:layout_width="0dp"    	
-		  android:layout_height="wrap_content"    	
-		  android:hint="@string/edit_message" />
 
-<Button android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-		android:text="@string/button_send"     	
-        android:onClick="SendMessage"/>
-        
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+     <TextView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/content"
+        android:maxLines="50"
+        android:scrollbars="vertical"
+        android:textSize="20dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+    </TextView> 
+
+    <GridView
+        android:id="@+id/grid"
+        android:layout_weight="0.2"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:numColumns="4" >
+    </GridView>
+
 </LinearLayout>
+
