--- a/res/menu/activity_main_menu.xml
+++ b/res/menu/activity_main_menu.xml
@@ -3,13 +3,15 @@
         android:title="@string/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
-    <item android:id="@+id/frac_dec"
-        android:title="F/D"
+    <item android:id="@+id/dec2frac"
+        android:title="fraction"
         android:orderInCategory="100"
+        android:icon="@drawable/dec"
         android:showAsAction="always" />
-    <item android:id="@+id/deg_rad"
-        android:title="R/D"
+    <item android:id="@+id/inDegrees"
+        android:title="Degrees/Radian"
         android:orderInCategory="100"
+        android:icon="@drawable/rad"
         android:showAsAction="always" />
     
 </menu>
