--- a/res/menu/activity_main_menu.xml
+++ b/res/menu/activity_main_menu.xml
@@ -13,5 +13,10 @@
         android:orderInCategory="100"
         android:icon="@drawable/rad"
         android:showAsAction="always" />
+    <item android:id="@+id/last_ans"
+        android:title="Ans"
+        android:orderInCategory="100"
+        android:icon="@drawable/ans"
+        android:showAsAction="always" />
     
 </menu>
