--- a/res/menu/activity_main_menu.xml
+++ b/res/menu/activity_main_menu.xml
@@ -1,9 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
+<!--     <item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
-    <item android:id="@+id/dec2frac"
+ -->
+	<item android:id="@+id/dec2frac"
         android:title="fraction"
         android:orderInCategory="100"
         android:icon="@drawable/dec"
