--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
         android:id="@+id/content"
         android:maxLines="50"
         android:scrollbars="vertical"
-        android:textSize="20dp"
+        android:textSize="24sp"
+        android:gravity="center_vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
     </TextView> 
